# langchain-litellm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
langchain_litellm/: __init__.py
langchain_litellm/embeddings/: __init__.py  litellm.py  litellm_router.py
tests/: utils.py
tests/integration_tests/: test_litellm_embeddings.py  test_litellm_embeddings_router.py
tests/unit_tests/: test_litellm_embeddings.py  test_litellm_embeddings_router.py
